# nascar-dfs-optimizer

./: .cursorrules  .env.example  .gitattributes  .gitignore  1  BUILD-PROGRESS.md  Backup App.command  CHANGELOG.md  DATA_SOURCES_INVESTIGATION.md  DAY3_DATA_STATUS.md  DAY3_SUMMARY.md  DEPLOYMENT.md  FINAL-EXECUTION-SUMMARY.md  HOW TO USE APP.md  INSTALL.md  LAUNCH_SCRIPT_README.md  LICENSE  Launch App.command  PROJECT-STATUS.md  QUICK START.command  README.md  RELEASE-NOTES-v1.2.1.md  RELEASE-NOTES.md  TROUBLESHOOTING.md  app  backtest.py  backtest_daytona2025_20260201_234036.csv  backtest_daytona2025_20260201_234036.txt  build-app.rtf  config.yaml  cursor_new_project_setup.md  dashboard.py  docker-compose.prod.yml  docker-compose.yml  integration_test.py  main.py  mc_sim.py  nascar projection model.md  package-lock.json  package.json  (+13 more)
apps/backend/: Dockerfile  pyproject.toml  test_leverage_structure.py  test_portfolio_regime.py
apps/backend/app/: job_manager.py  kernel.py  lineup_optimizer.py  logging_config.py  main.py  middleware.py  models.py  ontology.py  portfolio_generator.py  tail_metrics.py  tail_objectives.py
apps/backend/tests/: test_api_integration.py  test_constraints.py  test_kernel.py  test_kernel_conservation.py  test_main.py  test_optimizer.py  test_portfolio_generator.py  test_tail_metrics.py  test_tail_objectives.py
apps/native_mac/: CHANGELOG.md  Info.plist  dock_handler.py  kernel_logger.py  main.py  notification_manager.py  pyproject.toml  session_restorer.py  setup.py  version.py
apps/native_mac/docs/: INSTALL.md  TROUBLESHOOTING.md
(+354 files in other folders)
