[project]
name = "nascar-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "pydantic==2.5.0",
    "neo4j==5.15.0",
    "pulp==2.7.0",
    "slowapi==0.1.9",
    "python-json-logger==2.0.7",
    "polars>=0.20.0",
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "jax>=0.4.0",
    "jaxlib>=0.4.0",
    "numpyro>=0.13.0",
    "arviz>=0.17.0",
    "matplotlib>=3.5.0",
    "redis>=5.0.0",
    "structlog>=24.1.0",
    "ulid-py>=1.1.0",
    "sqlalchemy>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "httpx>=0.25.0,<0.28.0",
    "pytest-asyncio==0.21.1",
    "hypothesis>=6.100.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
