[project]
name = "nascar-dfs-optimizer"
version = "1.2.0"
description = "Native macOS NASCAR DFS Optimizer"
authors = [
    {name = "Zax", email = "zax@example.com"}
]
 dependencies = [
     "PySide6>=6.6.0",
     "pandas",
     "jax[cpu]",
     "jaxlib",
     "numpy",
     "neo4j",
     "pulp"
 ]
requires-python = ">=3.10"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"
line_length = 88

[tool.black]
line-length = 88
